-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 12
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8212688 | 11.0.2 | Roland Westrelin | P3 | Resolved | Fixed | b02 |
| JDK-8219360 | openjdk8u212 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
We've seen this with Shenandoah but is not shenandoah specific:
http://mail.openjdk.java.net/pipermail/shenandoah-dev/2018-September/007605.html
http://mail.openjdk.java.net/pipermail/shenandoah-dev/2018-September/007605.html
- backported by
-
JDK-8212688 BarrierSetC1::generate_referent_check() confuses register allocator
-
- Resolved
-
-
JDK-8219360 BarrierSetC1::generate_referent_check() confuses register allocator
-
- Resolved
-
- relates to
-
JDK-8288317 Enhance C1 regalloc diagnostics to assert hidden control flow
-
- Open
-