8211231: BarrierSetC1::generate_referent_check() confuses register allocator

Reviewed-by: iveresov, kvn